ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
  #- host: myapp.local  # Замените на ваше доменное имя или оставьте так (для теста) либо удалить и будет доступ только по ip
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-service
            port:
              number: 33500
